components/global-styles/main.scss
@import "./reset.scss";
@import "./vars.scss";

body {
  @include font-regular;
  margin: 0px;
  overflow: overlay;
}


h1,
h2,
h3,
p,
blockquote {
  @include text-margins
}

h1 {
  @include font-bold;
  font-size: 17vw;
  margin-left: -0.9vw;
  padding-top: 2.5vw;
  padding-bottom: 2.5vw;
}

h2 {
  @include font-bold;
  font-size: 7vw;
  padding-top: 2vw;
  padding-bottom: 2vw;
}

h3,
blockquote {
  @include font-bold;
  font-size: 4vw;
  padding-top: 1.5vw;
  padding-bottom: 1.5vw;
}

p {
  @include font-regular;
  font-size: 3vw;
  padding-top: 1vw;
  padding-bottom: 1vw;
}

@media only screen and (max-width: 700px) {
  p {
    font-size: 4vw;
  }
}

a {
  text-decoration: underline;
  color: black;
}

b {
  @include font-bold;
}

.color-cyan, 
.color-cyan a {
  color: $color-cyan;
}

.background-cyan {
  background-color: $color-cyan;
}

